@@ -9,6 +9,10 @@ v3.4.3 to
 - Catch Action Fs that chain to themselves.
 - Add escapes for the new action 2 operations 0E and 0F.
 - Support new signals. (Actions 5, variational 2, and 3.)
+- Process var. and random 2s and action 3 even when the feature is not
+  recognized.
+- (fix) Don't correct the feature of a var. or random 2 to match the
+  preceding action 1.
 
 v3.4.2 to v3.4.3 (r1244)
 - Permit Action 1/2/3 for bridges (Callback 33)
